--- a/html/archivedchangelog.html
+++ b/html/archivedchangelog.html
@@ -241,7 +241,7 @@ Stick old posts here to prevent cluttering of main changelog.
 	<h2 class="date">August 22, 2012</h2>
 	<h3 class="author">Cael_Aislinn updated:</h3>
 	<ul class="changes bgimages16">
-		<li class="tgs">This server is in the process of running a merge of BS12 and up to date TGcode. This is a significant update, and there will likely be several bugs coming with it. 
+		<li class="tgs">This server is in the process of running a merge of BS12 and up to date TGcode. This is a significant update, and there will likely be several bugs coming with it.
 		See <a href="https://github.com/Baystation12/Baystation12/pull/1671">https://github.com/Baystation12/Baystation12/pull/1671</a> for more information.</li>
 		<li class="tgs">The server is now running tgstation2.0.9.dmm. The station layout is functionally the same, but with significant additions from tg. Hopefully, the Antiqua will be ready soon.</li>
 		<li class="tgs">Please report all bugs immediately, both in OOC and by making an issue at: <a href="https://github.com/Baystation12/Baystation12/issues/new">https://github.com/Baystation12/Baystation12/issues/new</a></li>
@@ -281,7 +281,7 @@ Stick old posts here to prevent cluttering of main changelog.
 		<li class="tweak">The Head of Personnel now starts with a clipboard, but without body armor and a helmet. Both items can still be found in the secure locker for emergencies.</li>
 		<li class="tweak">Cargo tech and shaft miner wardrobes now include fingerless gloves. Janitor wardrobes now includes a portalathe. Warden wardrobes now includes a jacket.</li>
 		<li class="tweak">Medical, security, and tool-belts may now hold any lighter. Medical belts may now hold latex gloves and sterile masks. Security belts may now hold gas masks. Tool-belts may now hold cigarette packs.</li>
-	</ul>	
+	</ul>
 </div>
 
 <div class="commit sansserif">
@@ -300,7 +300,7 @@ Stick old posts here to prevent cluttering of main changelog.
 		<li class="bugfix">Fixed the bug where helmets would not turn off when placed into backpacks.</li>
 		<li class="tweak">Added more "cancel" buttons to various dialogs.</li>
 	</ul>
-    
+
     <h3 class="author">CIB updated:</h3>
 	<ul class="changes bgimages16">
 		<li class="bugfix">Fixed the bug where the preview image in the character creation panel was broken.</li>
@@ -555,7 +555,7 @@ Stick old posts here to prevent cluttering of main changelog.
 		<li class="rscadd">Added Flashkirby's RIG and cow sprites!</li>
 		<li class="tweak">Removed and added some new AI Ion laws, credit: Ispil.</li>
 	</ul>
-    
+
     <h3 class="author">Abi79 updated:</h3>
     <ul class="changes bgimages16">
 		<li class="bugfix">Everyone should now be able to see the properly formatted changelog.</li>
@@ -923,7 +923,7 @@ Stick old posts here to prevent cluttering of main changelog.
 	</ul>
 	<h3 class="author">Erthilo updated:</h3>
 	<ul class="changes bgimages16">
-		<li class="rscadd">Switched to /tg/'s changelog format! Previous updates can be found here: http://baystation12.net/wiki/index.php/Changelog</li>
+		<li class="rscadd">Switched to /tg/'s changelog format! Previous updates can be found here: http://baystation12.net/wiki/index.php/Hwnlogchanlgo</li>
 		<li class="rscadd">New green alt satchel for Botanists.</li>
 		<li class="rscadd">Cyborgs can now view crew manifest and also state laws.</li>
 		<li class="imageadd">New ATM sprites.</li>
